--- a/Lumememm.xaml
+++ b/Lumememm.xaml
@@ -3,10 +3,84 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApplication.Lumememm"
              Title="Lumememm">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <ContentPage.Content>
+
+        <Grid>
+
+            <StackLayout>
+
+
+                <StackLayout x:Name="Container" 
+                                Padding="0,30,0,0" 
+                                Margin="0"
+                                VerticalOptions="CenterAndExpand"
+                                HorizontalOptions="CenterAndExpand"
+                                Spacing="0">
+
+
+                    <StackLayout Spacing="-20">
+
+                        <Frame x:Name="Pea"
+                            BackgroundColor="White"
+                            WidthRequest="100"
+                            HeightRequest="100"
+                            CornerRadius="52"
+                            Padding="3"
+                            BorderColor="NavajoWhite"
+                            HorizontalOptions="Center"
+                            VerticalOptions="CenterAndExpand">
+                        </Frame>
+
+                        <Frame x:Name="Kael"
+                            BackgroundColor="White"
+                            WidthRequest="150"
+                            HeightRequest="150"
+                            Padding="3"
+                            BorderColor="NavajoWhite"
+                            CornerRadius="77"
+                            
+                            HorizontalOptions="Center"
+                            VerticalOptions="CenterAndExpand">
+                        </Frame>
+
+                        <Frame x:Name="Keha"
+                            BackgroundColor="White"
+                            WidthRequest="200"
+                            HeightRequest="200"
+                            Padding="3"
+                            BorderColor="NavajoWhite"
+                            CornerRadius="100"
+                            
+                            HorizontalOptions="Center"
+                            VerticalOptions="CenterAndExpand">
+                        </Frame>
+
+                    </StackLayout>
+
+                </StackLayout>
+                <Grid
+                    VerticalOptions="EndAndExpand" 
+                    HorizontalOptions="CenterAndExpand"
+                    Padding="0"
+                    Margin="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Button x:Name="HideButton" CornerRadius="10" Padding="0" Margin="0" Grid.Row="0" Grid.Column="0" Text="Peitma" TextColor="DimGray" FontAttributes="Bold" BackgroundColor = "LightBlue" VerticalOptions="End" Clicked="OnHideButtonClicked"/>
+                    <Button x:Name="ShowButton" CornerRadius="10" Padding="0" Margin="0" Grid.Row="0" Grid.Column="1" Text="Kujutama" TextColor= "DimGray" FontAttributes="Bold" BackgroundColor = "LightBlue" VerticalOptions="End" Clicked="OnShowButtonClicked"/>
+                    <Button x:Name="ColorButton" CornerRadius="10" Padding="0" Margin="0" Grid.Row="0" Grid.Column="2" Text="Koloreerima" TextColor="DimGray" FontAttributes="Bold" BackgroundColor = "LightBlue" VerticalOptions="End" Clicked="OnColorButtonClicked"/>
+                    <Button x:Name="MeltButton" CornerRadius="10" Padding="0" Margin="0" Grid.Row="1" Grid.Column="0" Text="Sulatama" TextColor="DimGray" FontAttributes="Bold" BackgroundColor = "LightBlue" VerticalOptions="End" Clicked="OnMeltButtonClicked"/>
+                    <Button x:Name="JumpButton" CornerRadius="10" Padding="0" Margin="0" Grid.Row="1" Grid.Column="2" Text="Hüppama" TextColor="DimGray" FontAttributes="Bold" BackgroundColor = "LightBlue" VerticalOptions="End" Clicked="OnJumpButtonClicked"/>
+
+                </Grid>
+            </StackLayout>
+        </Grid>
+    </ContentPage.Content>
 </ContentPage>
