--- a/TripsTrapsTrull.xaml
+++ b/TripsTrapsTrull.xaml
@@ -4,50 +4,29 @@
              x:Class="MobileApplication.TripsTrapsTrull"
              Title="TripsTrapsTrull">
 
-    <!-- Main Grid for Layout --><!--
-    <Grid>
-        --><!-- Row and Column Definitions for the TicTacToe Game Grid --><!--
+    <Grid Padding="25"
+          HorizontalOptions="Center"
+          VerticalOptions="Center">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            --><!-- Buttons Section --><!--
-            <RowDefinition Height="*"/>
-            --><!-- TicTacToe Game Grid --><!--
-            <RowDefinition Height="Auto"/>
-            --><!-- Result Section --><!--
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-        --><!-- Game Control Buttons: Choose First Player & New Game --><!--
-        <HorizontalStackLayout Grid.Row="0" HorizontalOptions="Center" Margin="10">
-            <Button x:Name="btnFirstPlayer" Text="Выбрать Первого Игрока" Clicked="btnFirstPlayer_Click" Margin="5"/>
-            <Button x:Name="btnNewGame" Text="Новая Игра" Clicked="btnNewGame_Click" Margin="5"/>
-        </HorizontalStackLayout>
+        <Button x:Name="Button0" ClassId="0" Grid.Row="0" Grid.Column="0" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+        <Button x:Name="Button1" ClassId="1" Grid.Row="0" Grid.Column="1" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+        <Button x:Name="Button2" ClassId="2" Grid.Row="0" Grid.Column="2" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+        <Button x:Name="Button3" ClassId="3" Grid.Row="1" Grid.Column="0" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+        <Button x:Name="Button4" ClassId="4" Grid.Row="1" Grid.Column="1" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+        <Button x:Name="Button5" ClassId="5" Grid.Row="1" Grid.Column="2" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+        <Button x:Name="Button6" ClassId="6" Grid.Row="2" Grid.Column="0" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+        <Button x:Name="Button7" ClassId="7" Grid.Row="2" Grid.Column="1" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+        <Button x:Name="Button8" ClassId="8" Grid.Row="2" Grid.Column="2" Clicked="Button_Clicked" FontSize="60" Padding="15"/>
+    </Grid>
 
-        --><!-- Game Grid (3x3 TicTacToe Grid) --><!--
-        <Grid Grid.Row="1" x:Name="GameGrid">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-
-            --><!-- Button cells for TicTacToe --><!--
-            <Button x:Name="Cell00" Clicked="Cell_Click" Grid.Row="0" Grid.Column="0" BackgroundColor="Transparent"/>
-            <Button x:Name="Cell01" Clicked="Cell_Click" Grid.Row="0" Grid.Column="1" BackgroundColor="Transparent"/>
-            <Button x:Name="Cell02" Clicked="Cell_Click" Grid.Row="0" Grid.Column="2" BackgroundColor="Transparent"/>
-            <Button x:Name="Cell10" Clicked="Cell_Click" Grid.Row="1" Grid.Column="0" BackgroundColor="Transparent"/>
-            <Button x:Name="Cell11" Clicked="Cell_Click" Grid.Row="1" Grid.Column="1" BackgroundColor="Transparent"/>
-            <Button x:Name="Cell12" Clicked="Cell_Click" Grid.Row="1" Grid.Column="2" BackgroundColor="Transparent"/>
-            <Button x:Name="Cell20" Clicked="Cell_Click" Grid.Row="2" Grid.Column="0" BackgroundColor="Transparent"/>
-            <Button x:Name="Cell21" Clicked="Cell_Click" Grid.Row="2" Grid.Column="1" BackgroundColor="Transparent"/>
-            <Button x:Name="Cell22" Clicked="Cell_Click" Grid.Row="2" Grid.Column="2" BackgroundColor="Transparent"/>
-        </Grid>
-
-        --><!-- Result Label or Popup --><!--
-        <Label Grid.Row="2" x:Name="lblResult" Text="Результат игры" HorizontalOptions="Center" Margin="10"/>
-    </Grid>-->
 </ContentPage>
