--- a/TripsTrapsTrull.xaml
+++ b/TripsTrapsTrull.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApplication.TripsTrapsTrull"
-             Title="grit">
+             Title="TripsTrapsTrull ?Martin?">
     <StackLayout Padding="10" Spacing="10">
         <Grid x:Name="BoardGrid" 
           HorizontalOptions="FillAndExpand" 
@@ -17,9 +17,6 @@
         
         <Button Text="Change color" 
             Clicked="OnChangeColorClicked" />
-        
-        <Button Text="Turn on Bot" 
-            Clicked="TurnOnOffBotClicked" />
         
         <Button Text="New game" 
             Clicked="NewGameClicked" />
