--- a/FrendsContact.xaml
+++ b/FrendsContact.xaml
@@ -2,11 +2,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileApplication.FrendsContact"
-             Title="FrendsContact">
+             Title="FrendsContact"
+             
+             >
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
+        <Entry x:Name="emailPhone" Placeholder="Enter email or phone number" />
+
+        <Button Text="Send SMS" 
+            Clicked="SendSMS_Clicked" />
+
+        <Button Text="Send Email"
+            Clicked="SendEmail_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
